feat: entities by ownerdid endpoint
